src/core/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> scene
Rule 1     scene -> directives worldblock
Rule 2     scene -> directives
Rule 3     scene -> worldblock
Rule 4     directives -> directives directive
Rule 5     directives -> directive
Rule 6     directive -> INTEGRATOR QUOTE SCONST QUOTE params
Rule 7     directive -> FILM QUOTE SCONST QUOTE params
Rule 8     directive -> SAMPLER QUOTE SCONST QUOTE params
Rule 9     directive -> FILTER QUOTE SCONST QUOTE params
Rule 10    directive -> CAMERA QUOTE SCONST QUOTE params
Rule 11    directive -> TRANSFORM matrix
Rule 12    worldblock -> WORLDBEGIN objects WORLDEND
Rule 13    objects -> objects object
Rule 14    objects -> objects ATTRIBUTEBEGIN objects ATTRIBUTEEND
Rule 15    objects -> objects TRANSFORMBEGIN objects TRANSFORMEND
Rule 16    objects -> object
Rule 17    object -> SHAPE QUOTE SCONST QUOTE params
Rule 18    object -> MAKENAMEDMATERIAL QUOTE SCONST QUOTE params
Rule 19    object -> MATERIAL QUOTE SCONST QUOTE params
Rule 20    object -> NAMEDMATERIAL QUOTE SCONST QUOTE
Rule 21    object -> TEXTURE QUOTE SCONST QUOTE QUOTE SCONST QUOTE QUOTE SCONST QUOTE params
Rule 22    object -> TEXTURE QUOTE SCONST QUOTE QUOTE FLOAT QUOTE QUOTE SCONST QUOTE params
Rule 23    object -> LIGHTSOURCE QUOTE SCONST QUOTE params
Rule 24    object -> AREALIGHTSOURCE QUOTE SCONST QUOTE params
Rule 25    object -> TRANSFORM matrix
Rule 26    object -> empty
Rule 27    params -> params param
Rule 28    params -> param
Rule 29    param -> QUOTE INTEGER SCONST QUOTE value
Rule 30    param -> QUOTE BOOL SCONST QUOTE value
Rule 31    param -> QUOTE STRING SCONST QUOTE value
Rule 32    param -> QUOTE FLOAT SCONST QUOTE value
Rule 33    param -> QUOTE RGB SCONST QUOTE value
Rule 34    param -> QUOTE POINT SCONST QUOTE value
Rule 35    param -> QUOTE NORMAL SCONST QUOTE value
Rule 36    param -> QUOTE TEX SCONST QUOTE value
Rule 37    param -> empty
Rule 38    value -> LBRACKET ICONST RBRACKET
Rule 39    value -> LBRACKET FCONST RBRACKET
Rule 40    value -> LBRACKET QUOTE SCONST QUOTE RBRACKET
Rule 41    value -> LBRACKET QUOTE TRUE QUOTE RBRACKET
Rule 42    value -> LBRACKET QUOTE FALSE QUOTE RBRACKET
Rule 43    value -> matrix
Rule 44    value -> empty
Rule 45    matrix -> LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
Rule 46    matrix -> LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
Rule 47    matrix -> LBRACKET number number number number number number number number number number number number number number number number RBRACKET
Rule 48    matrix -> LBRACKET number number number number number number number number number number number number RBRACKET
Rule 49    matrix -> LBRACKET number number number number number number number number RBRACKET
Rule 50    matrix -> LBRACKET number number number number number number RBRACKET
Rule 51    matrix -> LBRACKET number number number RBRACKET
Rule 52    number -> ICONST
Rule 53    number -> FCONST
Rule 54    empty -> <empty>

Terminals, with rules where they appear

AREALIGHTSOURCE      : 24
ATTRIBUTEBEGIN       : 14
ATTRIBUTEEND         : 14
BOOL                 : 30
CAMERA               : 10
FALSE                : 42
FCONST               : 39 53
FILM                 : 7
FILTER               : 9
FLOAT                : 22 32
ICONST               : 38 52
INTEGER              : 29
INTEGRATOR           : 6
LBRACKET             : 38 39 40 41 42 45 46 47 48 49 50 51
LIGHTSOURCE          : 23
MAKENAMEDMATERIAL    : 18
MATERIAL             : 19
NAMEDMATERIAL        : 20
NORMAL               : 35
POINT                : 34
QUOTE                : 6 6 7 7 8 8 9 9 10 10 17 17 18 18 19 19 20 20 21 21 21 21 21 21 22 22 22 22 22 22 23 23 24 24 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 40 40 41 41 42 42
RBRACKET             : 38 39 40 41 42 45 46 47 48 49 50 51
RGB                  : 33
SAMPLER              : 8
SCONST               : 6 7 8 9 10 17 18 19 20 21 21 21 22 22 23 24 29 30 31 32 33 34 35 36 40
SHAPE                : 17
STRING               : 31
TEX                  : 36
TEXTURE              : 21 22
TRANSFORM            : 11 25
TRANSFORMBEGIN       : 15
TRANSFORMEND         : 15
TRUE                 : 41
WORLDBEGIN           : 12
WORLDEND             : 12
error                : 

Nonterminals, with rules where they appear

directive            : 4 5
directives           : 1 2 4
empty                : 26 37 44
matrix               : 11 25 43
number               : 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 45 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 46 47 47 47 47 47 47 47 47 47 47 47 47 47 47 47 47 48 48 48 48 48 48 48 48 48 48 48 48 49 49 49 49 49 49 49 49 50 50 50 50 50 50 51 51 51
object               : 13 16
objects              : 12 13 14 14 15 15
param                : 27 28
params               : 6 7 8 9 10 17 18 19 21 22 23 24 27
scene                : 0
value                : 29 30 31 32 33 34 35 36
worldblock           : 1 3

Parsing method: LALR

state 0

    (0) S' -> . scene
    (1) scene -> . directives worldblock
    (2) scene -> . directives
    (3) scene -> . worldblock
    (4) directives -> . directives directive
    (5) directives -> . directive
    (12) worldblock -> . WORLDBEGIN objects WORLDEND
    (6) directive -> . INTEGRATOR QUOTE SCONST QUOTE params
    (7) directive -> . FILM QUOTE SCONST QUOTE params
    (8) directive -> . SAMPLER QUOTE SCONST QUOTE params
    (9) directive -> . FILTER QUOTE SCONST QUOTE params
    (10) directive -> . CAMERA QUOTE SCONST QUOTE params
    (11) directive -> . TRANSFORM matrix

    WORLDBEGIN      shift and go to state 5
    INTEGRATOR      shift and go to state 6
    FILM            shift and go to state 7
    SAMPLER         shift and go to state 8
    FILTER          shift and go to state 9
    CAMERA          shift and go to state 10
    TRANSFORM       shift and go to state 11

    scene                          shift and go to state 1
    directives                     shift and go to state 2
    worldblock                     shift and go to state 3
    directive                      shift and go to state 4

state 1

    (0) S' -> scene .



state 2

    (1) scene -> directives . worldblock
    (2) scene -> directives .
    (4) directives -> directives . directive
    (12) worldblock -> . WORLDBEGIN objects WORLDEND
    (6) directive -> . INTEGRATOR QUOTE SCONST QUOTE params
    (7) directive -> . FILM QUOTE SCONST QUOTE params
    (8) directive -> . SAMPLER QUOTE SCONST QUOTE params
    (9) directive -> . FILTER QUOTE SCONST QUOTE params
    (10) directive -> . CAMERA QUOTE SCONST QUOTE params
    (11) directive -> . TRANSFORM matrix

    $end            reduce using rule 2 (scene -> directives .)
    WORLDBEGIN      shift and go to state 5
    INTEGRATOR      shift and go to state 6
    FILM            shift and go to state 7
    SAMPLER         shift and go to state 8
    FILTER          shift and go to state 9
    CAMERA          shift and go to state 10
    TRANSFORM       shift and go to state 11

    worldblock                     shift and go to state 12
    directive                      shift and go to state 13

state 3

    (3) scene -> worldblock .

    $end            reduce using rule 3 (scene -> worldblock .)


state 4

    (5) directives -> directive .

    WORLDBEGIN      reduce using rule 5 (directives -> directive .)
    INTEGRATOR      reduce using rule 5 (directives -> directive .)
    FILM            reduce using rule 5 (directives -> directive .)
    SAMPLER         reduce using rule 5 (directives -> directive .)
    FILTER          reduce using rule 5 (directives -> directive .)
    CAMERA          reduce using rule 5 (directives -> directive .)
    TRANSFORM       reduce using rule 5 (directives -> directive .)
    $end            reduce using rule 5 (directives -> directive .)


state 5

    (12) worldblock -> WORLDBEGIN . objects WORLDEND
    (13) objects -> . objects object
    (14) objects -> . objects ATTRIBUTEBEGIN objects ATTRIBUTEEND
    (15) objects -> . objects TRANSFORMBEGIN objects TRANSFORMEND
    (16) objects -> . object
    (17) object -> . SHAPE QUOTE SCONST QUOTE params
    (18) object -> . MAKENAMEDMATERIAL QUOTE SCONST QUOTE params
    (19) object -> . MATERIAL QUOTE SCONST QUOTE params
    (20) object -> . NAMEDMATERIAL QUOTE SCONST QUOTE
    (21) object -> . TEXTURE QUOTE SCONST QUOTE QUOTE SCONST QUOTE QUOTE SCONST QUOTE params
    (22) object -> . TEXTURE QUOTE SCONST QUOTE QUOTE FLOAT QUOTE QUOTE SCONST QUOTE params
    (23) object -> . LIGHTSOURCE QUOTE SCONST QUOTE params
    (24) object -> . AREALIGHTSOURCE QUOTE SCONST QUOTE params
    (25) object -> . TRANSFORM matrix
    (26) object -> . empty
    (54) empty -> .

  ! shift/reduce conflict for SHAPE resolved as shift
  ! shift/reduce conflict for MAKENAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for NAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for TEXTURE resolved as shift
  ! shift/reduce conflict for LIGHTSOURCE resolved as shift
  ! shift/reduce conflict for AREALIGHTSOURCE resolved as shift
  ! shift/reduce conflict for TRANSFORM resolved as shift
    SHAPE           shift and go to state 16
    MAKENAMEDMATERIAL shift and go to state 17
    MATERIAL        shift and go to state 18
    NAMEDMATERIAL   shift and go to state 19
    TEXTURE         shift and go to state 20
    LIGHTSOURCE     shift and go to state 21
    AREALIGHTSOURCE shift and go to state 22
    TRANSFORM       shift and go to state 23
    WORLDEND        reduce using rule 54 (empty -> .)
    ATTRIBUTEBEGIN  reduce using rule 54 (empty -> .)
    TRANSFORMBEGIN  reduce using rule 54 (empty -> .)

  ! SHAPE           [ reduce using rule 54 (empty -> .) ]
  ! MAKENAMEDMATERIAL [ reduce using rule 54 (empty -> .) ]
  ! MATERIAL        [ reduce using rule 54 (empty -> .) ]
  ! NAMEDMATERIAL   [ reduce using rule 54 (empty -> .) ]
  ! TEXTURE         [ reduce using rule 54 (empty -> .) ]
  ! LIGHTSOURCE     [ reduce using rule 54 (empty -> .) ]
  ! AREALIGHTSOURCE [ reduce using rule 54 (empty -> .) ]
  ! TRANSFORM       [ reduce using rule 54 (empty -> .) ]

    objects                        shift and go to state 14
    object                         shift and go to state 15
    empty                          shift and go to state 24

state 6

    (6) directive -> INTEGRATOR . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 25


state 7

    (7) directive -> FILM . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 26


state 8

    (8) directive -> SAMPLER . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 27


state 9

    (9) directive -> FILTER . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 28


state 10

    (10) directive -> CAMERA . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 29


state 11

    (11) directive -> TRANSFORM . matrix
    (45) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (46) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (47) matrix -> . LBRACKET number number number number number number number number number number number number number number number number RBRACKET
    (48) matrix -> . LBRACKET number number number number number number number number number number number number RBRACKET
    (49) matrix -> . LBRACKET number number number number number number number number RBRACKET
    (50) matrix -> . LBRACKET number number number number number number RBRACKET
    (51) matrix -> . LBRACKET number number number RBRACKET

    LBRACKET        shift and go to state 31

    matrix                         shift and go to state 30

state 12

    (1) scene -> directives worldblock .

    $end            reduce using rule 1 (scene -> directives worldblock .)


state 13

    (4) directives -> directives directive .

    WORLDBEGIN      reduce using rule 4 (directives -> directives directive .)
    INTEGRATOR      reduce using rule 4 (directives -> directives directive .)
    FILM            reduce using rule 4 (directives -> directives directive .)
    SAMPLER         reduce using rule 4 (directives -> directives directive .)
    FILTER          reduce using rule 4 (directives -> directives directive .)
    CAMERA          reduce using rule 4 (directives -> directives directive .)
    TRANSFORM       reduce using rule 4 (directives -> directives directive .)
    $end            reduce using rule 4 (directives -> directives directive .)


state 14

    (12) worldblock -> WORLDBEGIN objects . WORLDEND
    (13) objects -> objects . object
    (14) objects -> objects . ATTRIBUTEBEGIN objects ATTRIBUTEEND
    (15) objects -> objects . TRANSFORMBEGIN objects TRANSFORMEND
    (17) object -> . SHAPE QUOTE SCONST QUOTE params
    (18) object -> . MAKENAMEDMATERIAL QUOTE SCONST QUOTE params
    (19) object -> . MATERIAL QUOTE SCONST QUOTE params
    (20) object -> . NAMEDMATERIAL QUOTE SCONST QUOTE
    (21) object -> . TEXTURE QUOTE SCONST QUOTE QUOTE SCONST QUOTE QUOTE SCONST QUOTE params
    (22) object -> . TEXTURE QUOTE SCONST QUOTE QUOTE FLOAT QUOTE QUOTE SCONST QUOTE params
    (23) object -> . LIGHTSOURCE QUOTE SCONST QUOTE params
    (24) object -> . AREALIGHTSOURCE QUOTE SCONST QUOTE params
    (25) object -> . TRANSFORM matrix
    (26) object -> . empty
    (54) empty -> .

  ! shift/reduce conflict for WORLDEND resolved as shift
  ! shift/reduce conflict for ATTRIBUTEBEGIN resolved as shift
  ! shift/reduce conflict for TRANSFORMBEGIN resolved as shift
  ! shift/reduce conflict for SHAPE resolved as shift
  ! shift/reduce conflict for MAKENAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for NAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for TEXTURE resolved as shift
  ! shift/reduce conflict for LIGHTSOURCE resolved as shift
  ! shift/reduce conflict for AREALIGHTSOURCE resolved as shift
  ! shift/reduce conflict for TRANSFORM resolved as shift
    WORLDEND        shift and go to state 32
    ATTRIBUTEBEGIN  shift and go to state 34
    TRANSFORMBEGIN  shift and go to state 35
    SHAPE           shift and go to state 16
    MAKENAMEDMATERIAL shift and go to state 17
    MATERIAL        shift and go to state 18
    NAMEDMATERIAL   shift and go to state 19
    TEXTURE         shift and go to state 20
    LIGHTSOURCE     shift and go to state 21
    AREALIGHTSOURCE shift and go to state 22
    TRANSFORM       shift and go to state 23

  ! WORLDEND        [ reduce using rule 54 (empty -> .) ]
  ! ATTRIBUTEBEGIN  [ reduce using rule 54 (empty -> .) ]
  ! TRANSFORMBEGIN  [ reduce using rule 54 (empty -> .) ]
  ! SHAPE           [ reduce using rule 54 (empty -> .) ]
  ! MAKENAMEDMATERIAL [ reduce using rule 54 (empty -> .) ]
  ! MATERIAL        [ reduce using rule 54 (empty -> .) ]
  ! NAMEDMATERIAL   [ reduce using rule 54 (empty -> .) ]
  ! TEXTURE         [ reduce using rule 54 (empty -> .) ]
  ! LIGHTSOURCE     [ reduce using rule 54 (empty -> .) ]
  ! AREALIGHTSOURCE [ reduce using rule 54 (empty -> .) ]
  ! TRANSFORM       [ reduce using rule 54 (empty -> .) ]

    object                         shift and go to state 33
    empty                          shift and go to state 24

state 15

    (16) objects -> object .

    WORLDEND        reduce using rule 16 (objects -> object .)
    ATTRIBUTEBEGIN  reduce using rule 16 (objects -> object .)
    TRANSFORMBEGIN  reduce using rule 16 (objects -> object .)
    SHAPE           reduce using rule 16 (objects -> object .)
    MAKENAMEDMATERIAL reduce using rule 16 (objects -> object .)
    MATERIAL        reduce using rule 16 (objects -> object .)
    NAMEDMATERIAL   reduce using rule 16 (objects -> object .)
    TEXTURE         reduce using rule 16 (objects -> object .)
    LIGHTSOURCE     reduce using rule 16 (objects -> object .)
    AREALIGHTSOURCE reduce using rule 16 (objects -> object .)
    TRANSFORM       reduce using rule 16 (objects -> object .)
    ATTRIBUTEEND    reduce using rule 16 (objects -> object .)
    TRANSFORMEND    reduce using rule 16 (objects -> object .)


state 16

    (17) object -> SHAPE . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 36


state 17

    (18) object -> MAKENAMEDMATERIAL . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 37


state 18

    (19) object -> MATERIAL . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 38


state 19

    (20) object -> NAMEDMATERIAL . QUOTE SCONST QUOTE

    QUOTE           shift and go to state 39


state 20

    (21) object -> TEXTURE . QUOTE SCONST QUOTE QUOTE SCONST QUOTE QUOTE SCONST QUOTE params
    (22) object -> TEXTURE . QUOTE SCONST QUOTE QUOTE FLOAT QUOTE QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 40


state 21

    (23) object -> LIGHTSOURCE . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 41


state 22

    (24) object -> AREALIGHTSOURCE . QUOTE SCONST QUOTE params

    QUOTE           shift and go to state 42


state 23

    (25) object -> TRANSFORM . matrix
    (45) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (46) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (47) matrix -> . LBRACKET number number number number number number number number number number number number number number number number RBRACKET
    (48) matrix -> . LBRACKET number number number number number number number number number number number number RBRACKET
    (49) matrix -> . LBRACKET number number number number number number number number RBRACKET
    (50) matrix -> . LBRACKET number number number number number number RBRACKET
    (51) matrix -> . LBRACKET number number number RBRACKET

    LBRACKET        shift and go to state 31

    matrix                         shift and go to state 43

state 24

    (26) object -> empty .

    WORLDEND        reduce using rule 26 (object -> empty .)
    ATTRIBUTEBEGIN  reduce using rule 26 (object -> empty .)
    TRANSFORMBEGIN  reduce using rule 26 (object -> empty .)
    SHAPE           reduce using rule 26 (object -> empty .)
    MAKENAMEDMATERIAL reduce using rule 26 (object -> empty .)
    MATERIAL        reduce using rule 26 (object -> empty .)
    NAMEDMATERIAL   reduce using rule 26 (object -> empty .)
    TEXTURE         reduce using rule 26 (object -> empty .)
    LIGHTSOURCE     reduce using rule 26 (object -> empty .)
    AREALIGHTSOURCE reduce using rule 26 (object -> empty .)
    TRANSFORM       reduce using rule 26 (object -> empty .)
    ATTRIBUTEEND    reduce using rule 26 (object -> empty .)
    TRANSFORMEND    reduce using rule 26 (object -> empty .)


state 25

    (6) directive -> INTEGRATOR QUOTE . SCONST QUOTE params

    SCONST          shift and go to state 44


state 26

    (7) directive -> FILM QUOTE . SCONST QUOTE params

    SCONST          shift and go to state 45


state 27

    (8) directive -> SAMPLER QUOTE . SCONST QUOTE params

    SCONST          shift and go to state 46


state 28

    (9) directive -> FILTER QUOTE . SCONST QUOTE params

    SCONST          shift and go to state 47


state 29

    (10) directive -> CAMERA QUOTE . SCONST QUOTE params

    SCONST          shift and go to state 48


state 30

    (11) directive -> TRANSFORM matrix .

    WORLDBEGIN      reduce using rule 11 (directive -> TRANSFORM matrix .)
    INTEGRATOR      reduce using rule 11 (directive -> TRANSFORM matrix .)
    FILM            reduce using rule 11 (directive -> TRANSFORM matrix .)
    SAMPLER         reduce using rule 11 (directive -> TRANSFORM matrix .)
    FILTER          reduce using rule 11 (directive -> TRANSFORM matrix .)
    CAMERA          reduce using rule 11 (directive -> TRANSFORM matrix .)
    TRANSFORM       reduce using rule 11 (directive -> TRANSFORM matrix .)
    $end            reduce using rule 11 (directive -> TRANSFORM matrix .)


state 31

    (45) matrix -> LBRACKET . number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (46) matrix -> LBRACKET . number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (47) matrix -> LBRACKET . number number number number number number number number number number number number number number number number RBRACKET
    (48) matrix -> LBRACKET . number number number number number number number number number number number number RBRACKET
    (49) matrix -> LBRACKET . number number number number number number number number RBRACKET
    (50) matrix -> LBRACKET . number number number number number number RBRACKET
    (51) matrix -> LBRACKET . number number number RBRACKET
    (52) number -> . ICONST
    (53) number -> . FCONST

    ICONST          shift and go to state 50
    FCONST          shift and go to state 51

    number                         shift and go to state 49

state 32

    (12) worldblock -> WORLDBEGIN objects WORLDEND .

    $end            reduce using rule 12 (worldblock -> WORLDBEGIN objects WORLDEND .)


state 33

    (13) objects -> objects object .

    WORLDEND        reduce using rule 13 (objects -> objects object .)
    ATTRIBUTEBEGIN  reduce using rule 13 (objects -> objects object .)
    TRANSFORMBEGIN  reduce using rule 13 (objects -> objects object .)
    SHAPE           reduce using rule 13 (objects -> objects object .)
    MAKENAMEDMATERIAL reduce using rule 13 (objects -> objects object .)
    MATERIAL        reduce using rule 13 (objects -> objects object .)
    NAMEDMATERIAL   reduce using rule 13 (objects -> objects object .)
    TEXTURE         reduce using rule 13 (objects -> objects object .)
    LIGHTSOURCE     reduce using rule 13 (objects -> objects object .)
    AREALIGHTSOURCE reduce using rule 13 (objects -> objects object .)
    TRANSFORM       reduce using rule 13 (objects -> objects object .)
    ATTRIBUTEEND    reduce using rule 13 (objects -> objects object .)
    TRANSFORMEND    reduce using rule 13 (objects -> objects object .)


state 34

    (14) objects -> objects ATTRIBUTEBEGIN . objects ATTRIBUTEEND
    (13) objects -> . objects object
    (14) objects -> . objects ATTRIBUTEBEGIN objects ATTRIBUTEEND
    (15) objects -> . objects TRANSFORMBEGIN objects TRANSFORMEND
    (16) objects -> . object
    (17) object -> . SHAPE QUOTE SCONST QUOTE params
    (18) object -> . MAKENAMEDMATERIAL QUOTE SCONST QUOTE params
    (19) object -> . MATERIAL QUOTE SCONST QUOTE params
    (20) object -> . NAMEDMATERIAL QUOTE SCONST QUOTE
    (21) object -> . TEXTURE QUOTE SCONST QUOTE QUOTE SCONST QUOTE QUOTE SCONST QUOTE params
    (22) object -> . TEXTURE QUOTE SCONST QUOTE QUOTE FLOAT QUOTE QUOTE SCONST QUOTE params
    (23) object -> . LIGHTSOURCE QUOTE SCONST QUOTE params
    (24) object -> . AREALIGHTSOURCE QUOTE SCONST QUOTE params
    (25) object -> . TRANSFORM matrix
    (26) object -> . empty
    (54) empty -> .

  ! shift/reduce conflict for SHAPE resolved as shift
  ! shift/reduce conflict for MAKENAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for NAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for TEXTURE resolved as shift
  ! shift/reduce conflict for LIGHTSOURCE resolved as shift
  ! shift/reduce conflict for AREALIGHTSOURCE resolved as shift
  ! shift/reduce conflict for TRANSFORM resolved as shift
    SHAPE           shift and go to state 16
    MAKENAMEDMATERIAL shift and go to state 17
    MATERIAL        shift and go to state 18
    NAMEDMATERIAL   shift and go to state 19
    TEXTURE         shift and go to state 20
    LIGHTSOURCE     shift and go to state 21
    AREALIGHTSOURCE shift and go to state 22
    TRANSFORM       shift and go to state 23
    ATTRIBUTEEND    reduce using rule 54 (empty -> .)
    ATTRIBUTEBEGIN  reduce using rule 54 (empty -> .)
    TRANSFORMBEGIN  reduce using rule 54 (empty -> .)

  ! SHAPE           [ reduce using rule 54 (empty -> .) ]
  ! MAKENAMEDMATERIAL [ reduce using rule 54 (empty -> .) ]
  ! MATERIAL        [ reduce using rule 54 (empty -> .) ]
  ! NAMEDMATERIAL   [ reduce using rule 54 (empty -> .) ]
  ! TEXTURE         [ reduce using rule 54 (empty -> .) ]
  ! LIGHTSOURCE     [ reduce using rule 54 (empty -> .) ]
  ! AREALIGHTSOURCE [ reduce using rule 54 (empty -> .) ]
  ! TRANSFORM       [ reduce using rule 54 (empty -> .) ]

    objects                        shift and go to state 52
    object                         shift and go to state 15
    empty                          shift and go to state 24

state 35
